examples/nextjs-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  labels:
    app: nextjs
spec:
  type: ClusterIP
  selector:
    app: nextjs
  ports:
    - name: http
      port: 80
      targetPort: http
